[package]
name = "copie"
version = "0.2.1"
authors = ["JonathanxD <jhrldev@gmail.com>"]
license = "MIT"
description = "Copies file from or to paths specified in environment variables and command-line."
homepage = "https://github.com/JonathanxD/copie"
repository = "https://github.com/JonathanxD/copie"
readme = "README.md"
keywords = ["file-tools", "command-line", "copy", "editor", "visual"]
categories = ["command-line-utilities", "filesystem"]
documentation = "https://docs.rs/copie/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"